# Recursion

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  pyproject.toml
config/arch/: hrm.yaml  transformers_baseline.yaml  trm.yaml  trm_hier6.yaml  trm_singlez.yaml
kaggle/combined/: arc-agi_concept_challenges.json  arc-agi_concept_solutions.json  arc-agi_evaluation2_challenges.json  arc-agi_evaluation2_solutions.json  arc-agi_training2_challenges.json  arc-agi_training2_solutions.json
src/recursion/: pretrain.py  puzzle_dataset.py
src/recursion/dataset/: build_arc_dataset.py  build_maze_dataset.py  build_sudoku_dataset.py
src/recursion/evaluators/: arc.py
src/recursion/models/: ema.py  layers.py  losses.py  sparse_embedding.py
src/recursion/models/recursive_reasoning/: hrm.py  transformers_baseline.py  trm.py  trm_hier6.py  trm_singlez.py
src/recursion/utils/: functions.py
